[gd_scene load_steps=5 format=3 uid="uid://bm8un5q75xanm"]

[ext_resource type="Script" path="res://scripts/scores.gd" id="1_ohav4"]
[ext_resource type="Texture2D" uid="uid://b8826ygwbtttd" path="res://assets/classic/sprites/menu.png" id="2_hnxe6"]
[ext_resource type="Theme" uid="uid://baedev3l5chn7" path="res://assets/classic/themes/general.tres" id="2_nj8j3"]
[ext_resource type="StyleBox" uid="uid://d0j4oukvmdlnc" path="res://assets/classic/themes/underline.tres" id="3_k1o26"]

[node name="Scores" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ohav4")

[node name="MainContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(90, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_nj8j3")

[node name="ScoresContainer" type="GridContainer" parent="MainContainer"]
layout_mode = 2
columns = 2

[node name="NameLabel" type="Label" parent="MainContainer/ScoresContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/normal = ExtResource("3_k1o26")
text = "name"

[node name="ScoreLabel" type="Label" parent="MainContainer/ScoresContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_styles/normal = ExtResource("3_k1o26")
text = "score"
horizontal_alignment = 2

[node name="BackButton" type="Button" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "back"
flat = true

[node name="MenuBackground" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("2_hnxe6")
centered = false

[node name="HTTPRequest" type="HTTPRequest" parent="."]
timeout = 5.0

[connection signal="pressed" from="MainContainer/BackButton" to="." method="_on_back_button_pressed"]
